--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -59,12 +59,12 @@ nav:
   - 3. Ontological Structure: 01-foundations/03-ontological-structure.md
   - 4. Principles and Rules: 01-foundations/04-principles-and-rules.md
   - 5. Terminology and Concepts: 01-foundations/05-terminology-and-concepts.md
-  - 6. Ontological Integration: 06-ontological-integration.md
-  - 7. User Interface Design: 07-user-interface-design.md
-  - 8. Attributes of Attributes – The 10 Ontological Domains: 08-attributes-of-attributes.md
-  - 9. Workflow Specification: 09-workflow-specification.md
-  - 10. Operational Flow: 10-operational-flow.md
-  - 11. Operational Chain and Triggers: 11-operational-chain-triggers.md
+  - 6. Overview: 02-architecture/06-overview.md
+  - 7. Core Tables: 02-architecture/07-core-tables.md
+  - 8. Relationships – The 10 Ontological Domains: 02-architecture/08-relationships.md
+  - 9. Instance Manager: 002-architecture/09-instance-manager.md
+  - 10. Process Manager: 02-architecture/10-process-manager.md
+  - 11. Bootstrap: 02-architecture/11-bootstrap.md
   - 12. Communication and Responsibility: 12-communication-responsibility.md
   - 13. External Integrations: 13-external-integrations.md
   - 14. Security Model: 14-security-model.md
