--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Install MkDocs + theme + PDF plugin
         run: |
           python -m pip install --upgrade pip
-          pip install mkdocs mkdocs-material mkdocs-pdf-export-plugin
+          pip install -r requirements.txt
 
       - name: Build MkDocs
         env:
